# geodesk-rs

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
examples/: custom_queries.rs  query_restaurants.rs  query_roads_copenhagen.rs  query_way_nodes.rs
src/: lib.rs
src/bridge/: geodesk_bridge.cpp  geodesk_bridge.h
